--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -4,6 +4,7 @@
 @use './partials/main';
 @use './partials/footer';
 @use './partials/media-queries';
+@use './partials/variables';
 
 // Font and Sizes:
 // Title Text: Raleway, Bold, 46px. Line height 24px, Letter spacing 1.1px.
@@ -13,15 +14,15 @@
 // Body Text: Lora, Regular, 14px. Center, line height 24px, letter spacing 0.3px.
 // Footing: Lora, Regular, 13px. Line height 44px, letter spacing 0.3px.
 
-// Colors:
+// Colours:
 // Brown grey: #999999
 // Black: #2E2E2E
 // White: #F6F6F6
 // Black two: #333333
 
-$BrownGrey: #999999;
-$Black: #2E2E2E;
-$White: #F6F6F6;
-$BlackTwo: #333333;
-$Apricot: #DDED9A;
-$ForestGreen: #64A604;
+// $BrownGrey: #999999;
+// $Black: #2E2E2E;
+// $White: #F6F6F6;
+// $BlackTwo: #333333;
+// $Apricot: #DDED9A;
+// $ForestGreen: #64A604;
